apps/longhorn/middleware-basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-basic-auth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-basic-auth
