apps/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: longhorn-system-middleware-basic-auth@kubernetescrd
    cert-manager.io/cluster-issuer: zerossl-production
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - longhorn.sakul-flee.de
      secretName: longhorn-tls
  rules:
    - host: longhorn.sakul-flee.de
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
